crates/treebank-json/test/corpus/values.txt
================================================================================
a document is one value, and any value will do
================================================================================

{"a": 1}

--------------------------------------------------------------------------------

(document
  (object
    (pair
      key: (string
        (string_content))
      value: (number))))

================================================================================
a bare scalar is a whole document (RFC 7159 lifted RFC 4627's restriction)
================================================================================

42

--------------------------------------------------------------------------------

(document
  (number))

================================================================================
a bare string is a whole document
================================================================================

"hello"

--------------------------------------------------------------------------------

(document
  (string
    (string_content)))

================================================================================
a bare null is a whole document
================================================================================

null

--------------------------------------------------------------------------------

(document
  (null))

================================================================================
the empty container has no children at all
================================================================================

[{}, []]

--------------------------------------------------------------------------------

(document
  (array
    (object)
    (array)))

================================================================================
all three keyword literals
================================================================================

[true, false, null]

--------------------------------------------------------------------------------

(document
  (array
    (true)
    (false)
    (null)))

================================================================================
nesting, and a key that repeats
================================================================================

{"a": {"b": [1, {"a": null}]}, "a": 2}

--------------------------------------------------------------------------------

(document
  (object
    (pair
      key: (string
        (string_content))
      value: (object
        (pair
          key: (string
            (string_content))
          value: (array
            (number)
            (object
              (pair
                key: (string
                  (string_content))
                value: (null)))))))
    (pair
      key: (string
        (string_content))
      value: (number))))

================================================================================
the number grammar, in every shape RFC 8259 §6 allows
================================================================================

[0, -0, 1, -1, 1.5, -1.5, 1e10, 1E10, 1e+10, 1e-10, 0.0e0, 12345678901234567890]

--------------------------------------------------------------------------------

(document
  (array
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)
    (number)))

================================================================================
JSON's four whitespace characters, between every token
================================================================================

	{ "a"	:
  [ 1 ,
2 ] }

--------------------------------------------------------------------------------

(document
  (object
    (pair
      key: (string
        (string_content))
      value: (array
        (number)
        (number)))))
